--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.22.2"
+  },
+  "dependencies": {
+    "xlsx": "^0.18.5"
   }
 }
