--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^7.3.1",
+    "@cucumber/pretty-formatter": "^1.0.0-alpha.2",
     "@playwright/test": "^1.22.2"
   },
   "dependencies": {
