--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@cucumber/cucumber": "^7.3.1",
     "@cucumber/pretty-formatter": "^1.0.0-alpha.2",
-    "@playwright/test": "^1.22.2"
+    "@playwright/test": "^1.22.2",
+    "playwright": "^1.22.2"
   },
   "dependencies": {
     "xlsx": "^0.18.5"
