--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "test",
+  "name": "playwright-sample-api-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a sample API test by using Playwright",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "author": "",
+  "author": "Azwan Azlan",
   "license": "ISC",
   "devDependencies": {
-    "@cucumber/cucumber": "^7.3.1",
-    "@cucumber/pretty-formatter": "^1.0.0-alpha.2",
-    "@playwright/test": "^1.22.2",
-    "playwright": "^1.22.2"
-  },
-  "dependencies": {
-    "xlsx": "^0.18.5"
+    "@playwright/test": "^1.24.0",
+    "playwright": "1.24"
   }
 }
